# blubeenjin

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
project/: CMakeLists.txt  main.c
resources/: default.frag  default.vert
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/engine/: CMakeLists.txt  core_engine.c
source/core/engine/headers/: core_engine.h
source/core/math/: CMakeLists.txt
source/core/math/scalar/: CMakeLists.txt
source/core/math/scalar/headers/: mat_aos.h  quat_aos.h  vec_aos.h  vectormath_aos.h
source/core/renderer/: CMakeLists.txt
source/core/renderer/image/: CMakeLists.txt  image.c
source/core/renderer/image/headers/: image.h
source/core/renderer/mesh/: CMakeLists.txt  mesh.c
source/core/renderer/mesh/headers/: mesh.h
source/core/renderer/shader/: CMakeLists.txt  shader.c
source/core/renderer/shader/headers/: shader.h
source/core/renderer/sprite/: CMakeLists.txt  sprite.c
source/core/renderer/sprite/headers/: sprite.h
source/core/renderer/texture/: CMakeLists.txt  texture.c
source/core/renderer/texture/headers/: texture.h
source/core/renderer/vertex_layout/: CMakeLists.txt  vertex_layout.c
source/core/renderer/vertex_layout/headers/: vertex_layout.h
source/core/utils/: CMakeLists.txt
source/core/utils/resource_utils/: CMakeLists.txt  resource_utils.c
source/core/utils/resource_utils/headers/: resource_utils.h
