SET(CMAKE_MACOSX_RPATH 1)

SET(TARGET_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/headers")
SET(HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/headers/vec_aos.h" "${CMAKE_CURRENT_SOURCE_DIR}/headers/mat_aos.h" "${CMAKE_CURRENT_SOURCE_DIR}/quat_aos.h" "${CMAKE_CURRENT_SOURCE_DIR}/headers/vectormath_aos.h")

ADD_LIBRARY(core_math INTERFACE)
TARGET_INCLUDE_DIRECTORIES(core_math INTERFACE ${TARGET_INC_DIR})
