SET(CMAKE_MACOSX_RPATH 1)

SET(HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/headers/mesh.h)
SET(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/mesh.c)

SET(TARGET_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/headers" "${CMAKE_SOURCE_DIR}/source/core/renderer/vertex/headers")

SET(TARGET_LIBS vertex_layout core_math vertex_layout)

use_c99()

ADD_LIBRARY(mesh SHARED ${SRC_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(mesh ${TARGET_LIBS})
TARGET_INCLUDE_DIRECTORIES(mesh PUBLIC ${TARGET_INC_DIR})
