SET(CMAKE_MACOSX_RPATH 1)

SET(HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/headers/sprite.h)
SET(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/sprite.c)

SET(TARGET_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/headers" "${CMAKE_SOURCE_DIR}/source/core/renderer/vertex/headers")

SET(TARGET_LIBS core_math mesh)

use_c99()

ADD_LIBRARY(sprite SHARED ${SRC_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(sprite ${TARGET_LIBS})
TARGET_INCLUDE_DIRECTORIES(sprite PUBLIC ${TARGET_INC_DIR})
