SET(CMAKE_MACOSX_RPATH 1)

SET(HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/headers/texture.h ${CMAKE_CURRENT_SOURCE_DIR}/headers/stb_img.h)
SET(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/texture.c)

SET(TARGET_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/headers ${CMAKE_SOURCE_DIR}/source/core/renderer/image/headers)

SET(TARGET_LIBS resource_utils glad)

use_c99()

ADD_LIBRARY(texture SHARED ${SRC_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(texture ${TARGET_LIBS})
TARGET_INCLUDE_DIRECTORIES(texture PUBLIC ${TARGET_INC_DIR})

