SET(CMAKE_MACOSX_RPATH 1)

SET(HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/headers/resource_utils.h)
SET(SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/resource_utils.c)

SET(TARGET_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/headers")

SET(TARGET_LIBS core_math)

use_c99()

ADD_LIBRARY(resource_utils SHARED ${SRC_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(resource_utils ${TARGET_LIBS})
TARGET_INCLUDE_DIRECTORIES(resource_utils PUBLIC ${TARGET_INC_DIR})
